critical vs super-critical gel story

--- a/talk_Montpellier.tex
+++ b/talk_Montpellier.tex
@@ -386,16 +386,12 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 \section*{Beyond critical gels}
 
-\begin{frame}{Acidifying casein solutions with \textup{HCl}}
-\tikzsetnextfilename{dosage}
-\input{fig_presentation/dosage.pgf}
-\end{frame}
-
 \begin{frame}{Over-acidified protein gels: beyond isoelectric pH}
 	\tikzsetnextfilename{prise_cas4}
 	\input{fig_soundbite_palavas/prise_cas4.pgf}
 	\begin{itemize}
 	\item[$\Rightarrow$] still solid
+	\item From critical to super-critical gels?
 	\end{itemize}
 \end{frame}
 
@@ -403,7 +399,7 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 	\tikzsetnextfilename{sweep_cas4}
 	\input{fig_soundbite_palavas/sweep_cas4.pgf}
 	\begin{itemize}
-	\item Near isoelectric, power law rheology $G^\prime, G^{\prime\prime}$ typical of gels 
+	\item Near isoelectric, power law rheology $G^\prime, G^{\prime\prime}$ typical of critical gels 
 	\item Over-acidification lowers exponent and creates a minimum in $G^{\prime\prime}$
 	\item Transition to soft-glassy behaviour \\\textit{\footnotesize Sollich, PRE (1998); Mason, Curr. Opin. Colloid Interface Sci. (1999)}
 	\end{itemize}
