conclusion of over-acidification

--- a/talk_Montpellier.tex
+++ b/talk_Montpellier.tex
@@ -434,6 +434,15 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 \end{frame}
 
+\begin{frame}{Over-acidification summary}
+\begin{itemize}
+\item The critical network is still there but over-compressed
+\item Transition to soft glassy rheology
+\item Creep regimes 1 and 2 still valid but messy in the middle
+\item[$\Rightarrow$] Rupture scenario of critical gel only partially valid for other gels.
+\end{itemize}
+\end{frame}
+
 
 %\begin{frame}{Merciless yoghurt breakers}
 %\textit{Leocmach et al. PRL 113, 038303 (2014), \footnotesize ArXiv 1401.8234}
