Only gdot, modeled on cas4gdl1

--- a/talk_Montpellier.tex
+++ b/talk_Montpellier.tex
@@ -415,21 +415,26 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \begin{frame}{Microscructure: fluorescent confocal microscopy}
 	\tikzsetnextfilename{structure_confocal}
 	\input{fig_soundbite_palavas/structure_confocal.pgf}
+	\vspace{-1em}
 	\begin{itemize}
 	\item Maximum $G^\prime$ corresponds to maximum contrast between phases
-	\item Characteristic size $\xi$ increases during over-acidification
-	\item Casein aggregates swell $\sim$ over compressed gel $\Rightarrow$ soft glassy
+	\item Pore size $\xi$ decrease during over-acidification
+	\item<2> Casein aggregates swell $\sim$ over compressed gel $\Rightarrow$ soft glassy
 	\end{itemize}
 \end{frame}
 
 \begin{frame}{Three creep regimes + softness\hfill\textsc{gdl} 4\%}
 \vfill
 	\tikzsetnextfilename{creep_cas4_gdl4}
-	\input{fig_soundbite_palavas/creep_cas4_gdl4.pgf}
+	\input{fig_presentation/creep_cas4_gdl4.pgf}
 \begin{itemize}
-%\item Failure scenario almost conserved: ``fibre bundle'' network
-%\item Other dissipation due to softness: overcompressed gel
-\item More difficult to predict failure time from fractures nucleation time
+\item reversible, homogeneous creep $\rightarrow$ irreversible fracture growth
+\item nucleation regime \alert{NOT universal}
+\begin{itemize}
+	\item possible to reform bond?
+	\item friction between swollen strands?
+	\item glassy dissipation?
+\end{itemize}
 \end{itemize}
 
 \end{frame}
@@ -438,7 +443,7 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \begin{itemize}
 \item The critical network is still there but over-compressed
 \item Transition to soft glassy rheology
-\item Creep regimes 1 and 2 still valid but messy in the middle
+\item Power-law creep and fracture growth still present but do not rule everything
 \item[$\Rightarrow$] Rupture scenario of critical gel only partially valid for other gels.
 \end{itemize}
 \end{frame}
