remet le dosage qui avait sauté

--- a/talk_Montpellier.tex
+++ b/talk_Montpellier.tex
@@ -386,6 +386,11 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 \section*{Beyond critical gels}
 
+\begin{frame}{Acidifying casein solutions with \textup{HCl}}
+\tikzsetnextfilename{dosage}
+\input{fig_presentation/dosage.pgf}
+\end{frame}
+
 \begin{frame}{Over-acidified protein gels: beyond isoelectric pH}
 	\tikzsetnextfilename{prise_cas4}
 	\input{fig_soundbite_palavas/prise_cas4.pgf}
@@ -447,28 +452,6 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \item[$\Rightarrow$] Rupture scenario of critical gel only partially valid for other gels.
 \end{itemize}
 \end{frame}
-
-
-%\begin{frame}{Merciless yoghurt breakers}
-%\textit{Leocmach et al. PRL 113, 038303 (2014), \footnotesize ArXiv 1401.8234}
-%
-%\bigskip
-%\begin{tabu}{X[c]X[c]c}
-%\includegraphics[height=0.3\textheight]{Chris}&
-%\includegraphics[height=0.3\textheight]{Thibaut}&
-%\includegraphics[height=0.3\textheight]{Seb}\\
-%Christophe Perge & Thibaut Divoux & Sebastien Manneville\\
-%PhD student & CNRS researcher & Professor\\
-%E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
-%\end{tabu}
-%
-%
-%\bigskip
-%\begin{description}[Special thanks]
-%\item[Special thanks] to Alan Parker (Firmenich) for prompting this study and providing casein \& GDL
-%\end{description} 
-%
-%\end{frame}
 
 \appendix
 \newcounter{finalframe}
