backslides: basquin rescaled, Monkman-Grant, wavelength

--- a/talk_Montpellier.tex
+++ b/talk_Montpellier.tex
@@ -451,6 +451,11 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \item Power-law creep and fracture growth still present but do not rule everything
 \item[$\Rightarrow$] Rupture scenario of critical gel only partially valid for other gels.
 \end{itemize}
+
+\bigskip
+\begin{center}
+\structure{\huge Thank you for your attention}
+\end{center}
 \end{frame}
 
 \appendix
@@ -500,6 +505,23 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \end{tikzpicture}
 
 Failure at $\gamma\approx 1$ for a well defined time $\tau_f$
+\end{frame}
+
+\begin{frame}{Basquin law rescaling}
+	\tikzsetnextfilename{basquin_rescale}
+	\input{fig_soundbite_palavas/basquin.pgf}
+\end{frame}
+
+\begin{frame}{Monkman-Grant: Predict failure from nucleation}
+	\tikzsetnextfilename{MonkmanGrant}
+	\input{fig_soundbite_palavas/MonkmanGrant.pgf}
+\end{frame}
+
+\begin{frame}{Wavelength}
+	\tikzsetnextfilename{lambda}
+	\input{fig_soundbite_palavas/lambda.pgf}
+	\textcolor{Accent1}{$\blacktriangleright$} $\lambda\propto e$ compatible with nucleation rate
+
 \end{frame}
 
 \setcounter{framenumber}{\value{finalframe}}
