Add DOI link to PRL

--- a/abstract_fracture.tex
+++ b/abstract_fracture.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{kpfonts}
 \usepackage{siunitx}
+\usepackage{hyperref}
 
 \usepackage{pgfplots}
 \usepackage{pgfplotstable}
@@ -35,7 +36,7 @@
 
 \maketitle
 
-Mouthfeel is a complex, multidimensional  sensory experience, whose design is critical to the success of a dish or a food product. Here we investigate the mechanical behaviour of a model yoghurt under large deformation. Biomaterials such as protein or polysaccharide gels are known to behave qualitatively as soft solids and to rupture under an external load. Combining optical and ultrasonic imaging to shear rheology we show [Leocmach et al., Phys. Rev. Lett., 2014, 113, 038303] that the failure scenario of an acid-induced sodium caseinate gel is reminiscent of brittle solids: after a primary creep regime characterized by a power-law behavior whose exponent is fully accounted for by linear viscoelasticity, fractures nucleate and grow logarithmically perpendicularly to shear, up to the sudden rupture of the gel. A single equation accounting for those two successive processes nicely captures the full rheological response. The failure time follows a decreasing power law with the applied shear stress, similar to the Basquin law of fatigue for solids. These results are in excellent agreement with recent fibre-bundle models that include damage accumulation on elastic fibres and exemplify protein gels as model, brittlelike soft solids.
+Mouthfeel is a complex, multidimensional  sensory experience, whose design is critical to the success of a dish or a food product. Here we investigate the mechanical behaviour of a model yoghurt under large deformation. Biomaterials such as protein or polysaccharide gels are known to behave qualitatively as soft solids and to rupture under an external load. Combining optical and ultrasonic imaging to shear rheology we show [\href{http://link.aps.org/doi/10.1103/PhysRevLett.113.038303}{Leocmach et al., Phys. Rev. Lett., 2014, 113, 038303}] that the failure scenario of an acid-induced sodium caseinate gel is reminiscent of brittle solids: after a primary creep regime characterized by a power-law behavior whose exponent is fully accounted for by linear viscoelasticity, fractures nucleate and grow logarithmically perpendicularly to shear, up to the sudden rupture of the gel. A single equation accounting for those two successive processes nicely captures the full rheological response. The failure time follows a decreasing power law with the applied shear stress, similar to the Basquin law of fatigue for solids. These results are in excellent agreement with recent fibre-bundle models that include damage accumulation on elastic fibres and exemplify protein gels as model, brittlelike soft solids.
 
 \vfill
 \begin{center}
