--- a/talk_Montpellier.tex
+++ b/talk_Montpellier.tex
@@ -258,7 +258,7 @@ Irreversible deformation
 \begin{itemize}
 \item Water (\SI{30}{\celsius})
 \item Sodium caseinate (milk protein) 4\%
-\raisebox{0.6\normalbaselineskip}[0pt][0pt]{$\left.\rule{0pt}{1.1\normalbaselineskip}\right(\}$ stable solution}
+\raisebox{0.6\normalbaselineskip}[0pt][0pt]{$\left.\rule{0pt}{1.1\normalbaselineskip}\right\}$ stable solution}
 \item Glucono-$\delta$-lactone (GDL) 1\% $\Rightarrow$ slow homogeneous acidification
 \end{itemize}
 \end{block}
