changes made in the train

--- a/creep_beamer.tex
+++ b/creep_beamer.tex
@@ -559,7 +559,7 @@ $\Rightarrow$ no room for plasticity
 \begin{frame}{Creep and yielding summary}
 \begin{itemize}
 \item failure involves a single time scale $\tau_f \sim \sigma^{-5.5}$ Basquin law
-\item \begin{minipage}{0.4\textwidth}\center reversible,\\ homogeneous creep\end{minipage} \hfill\textcolor{ilmorange}{$\rightarrow$}\hfill \begin{minipage}{0.4\textwidth}\center irreversible fracture growth\end{minipage}
+\item $\left.\begin{minipage}{0.4\textwidth}\center reversible,\\ homogeneous creep\end{minipage}\right\rbrace$ \hfill\textcolor{ilmorange}{$\rightarrow$}\hfill $\left\lbrace\begin{minipage}{0.4\textwidth}\center irreversible fracture growth\end{minipage}\right.$
 \item a single expression captures all the global rheological response
 \end{itemize}
 \tikzsetnextfilename{creep_summary}
