--- a/seminaire_PIMM.tex
+++ b/seminaire_PIMM.tex
@@ -125,7 +125,7 @@
 \newcolumntype{P}[1]{>{\raggedright}p{#1}}
 
 \institute[Lyon]{iLM, Univ. Claude Bernard Lyon 1 and CNRS, France}
-\title[Yoghurt under stress]{Acid-induced protein gels: from gelation to stress-induced failure}
+\title{Yoghurt under stress}%[Yoghurt under stress]{Acid-induced protein gels: from gelation to stress-induced failure}
 \author[M. Leocmach]{Mathieu Leocmach}
 \date{9 June 2016}
 \titlegraphic{
