shorter talk for CECAM workshop Only PRL story. No confocal, so neither Thomas nor PLATIM.

--- a/beamerthemeilm.sty
+++ b/beamerthemeilm.sty
@@ -35,6 +35,10 @@
 \setbeamercolor{item}{fg=ilmorange}
 \setbeamercolor{block body}{bg=ilmcolor!5}
 \setbeamercolor{block title}{bg=ilmcolor, fg=white}
+\setbeamercolor{alerted text}{fg=ilmorange}
+\setbeamercolor{palette primary}{fg=white}
+\setbeamercolor{palette secondary}{bg=ilmcolor!10!white}
+\setbeamercolor{palette tertiary}{bg=ilmcolor,fg=white}
 %\setbeamercovered{dynamic}
 
 
