--- a/talk_CECAM.tex
+++ b/talk_CECAM.tex
@@ -128,19 +128,18 @@
 \institute[Lyon]{iLM, Univ. Claude Bernard Lyon 1 and CNRS, France}
 \title{Yoghurt under stress}%[Yoghurt under stress]{Acid-induced protein gels: from gelation to stress-induced failure}
 \author[M. Leocmach]{Mathieu Leocmach}
-\date{9 June 2016}
+\date{15 June 2016}
 \titlegraphic{
-	\begin{tabu}{X[c]X[c]X[c]X[c]}
+	\begin{tabu}{X[c]X[c]X[c]}
 		\includegraphics[height=3\baselineskip]{Chris}&
-		\includegraphics[height=3\baselineskip]{Thomas}&
 		\includegraphics[height=3\baselineskip]{Thibaut}&
 		\includegraphics[height=3\baselineskip]{Seb}\\
-		Christophe Perge & Thomas\linebreak Gibaud & Thibaut\linebreak Divoux & Sebastien Manneville\\
+		Christophe\linebreak Perge & Thibaut\linebreak Divoux & Sebastien Manneville\\
 	\end{tabu}
 	
 	\vfill
 	\includegraphics[height=2\baselineskip]{logo_ens-lyon}\quad
-	\includegraphics[height=2\baselineskip]{logo_ums_grand}\quad
+	%\includegraphics[height=2\baselineskip]{logo_ums_grand}\quad
 	\includegraphics[height=2\baselineskip]{CNRSfilaire-Q}\quad
 	\includegraphics[height=2\baselineskip]{CRPP}\quad
 	\includegraphics[height=2\baselineskip,clip=true, trim=6mm 14mm 6mm 0]{NEW-Logo-ERC-OUTLINE}
@@ -347,6 +346,19 @@ Irreversible deformation
 
 \include{creep_beamer}
 
+\appendix
+\newcounter{finalframe}
+\setcounter{finalframe}{\value{framenumber}}
+
+\begin{frame}[plain]
+\vspace{6\baselineskip}
+\begin{center}
+\structure{\huge Thank you for your attention}
+\end{center}
+\vspace{6\baselineskip}
+\textit{\footnotesize Leocmach, Perge, Divoux \& Manneville. Creep and fracture of a protein gel under stress. Phys Rev Lett. 2014;113(3):038303.}
+\end{frame}
+
 \begin{frame}{Can we generalise to biogels?}
 \hfill\textup{\footnotesize\usebeamercolor[fg]{titlelike}(physical gels
 $E_{bond}\gg k_B T$)}
@@ -449,12 +461,7 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \end{center}
 \end{frame}
 
-\appendix
-\newcounter{finalframe}
-\setcounter{finalframe}{\value{framenumber}}
 
-\begin{frame}[plain]
-\end{frame}
 
 \begin{frame}{Creep rheology: Three regimes}
 \tikzsetnextfilename{three_regimes}
